<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_top"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:text="@string/text_header"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btSpotStreamer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginLeft="@dimen/activity_button_margin_side"
        android:layout_marginRight="@dimen/activity_button_margin_side"
        android:layout_weight="1"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onButtonsClick"
        android:shadowColor="#979797"
        android:text="@string/button_spotify"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btScores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginLeft="@dimen/activity_button_margin_side"
        android:layout_marginRight="@dimen/activity_button_margin_side"
        android:layout_weight="1"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onButtonsClick"
        android:shadowColor="#979797"
        android:text="@string/button_scores"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btLibrary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginLeft="@dimen/activity_button_margin_side"
        android:layout_marginRight="@dimen/activity_button_margin_side"
        android:layout_weight="1"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onButtonsClick"
        android:shadowColor="#979797"
        android:text="@string/button_library"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btBuildBigger"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginLeft="@dimen/activity_button_margin_side"
        android:layout_marginRight="@dimen/activity_button_margin_side"
        android:layout_weight="1"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onButtonsClick"
        android:shadowColor="#979797"
        android:text="@string/button_buildbig"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btXYZReader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_button_margin_bottom"
        android:layout_marginLeft="@dimen/activity_button_margin_side"
        android:layout_marginRight="@dimen/activity_button_margin_side"
        android:layout_weight="1"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onButtonsClick"
        android:shadowColor="#979797"
        android:text="@string/button_xyzreader"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/btCapstone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_button_margin_side"
        android:layout_marginRight="@dimen/activity_button_margin_side"
        android:layout_weight="1"
        android:background="#cd1040"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onButtonsClick"
        android:shadowColor="#979797"
        android:text="@string/button_capstone"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />


</LinearLayout>
